TestSuite/errors/err0361_InherFromOnlyDeclClasses2.pas
type
  TErr<T3> = class;
  
  TDer<T4> = class(List<TErr<T4>>)
  end;
  
  TErr<T3> = class end;
  
begin 

end.